sub menu line spacing fixed

--- a/cyan/assets/css/custom.css
+++ b/cyan/assets/css/custom.css
@@ -168,6 +168,7 @@
 .sub-menu-parent { position: relative; }
 
 .sub-menu {
+  line-height: 2em;
   visibility: hidden; /* hides sub-menu */
   opacity: 0;
   position: absolute;
